--- a/thp3urlz.html
+++ b/thp3urlz.html
@@ -9,7 +9,13 @@
 <title>THP3 Hyperlinks</title>
 </head>
 <body>
-
+<h1>thp3urlz</h1>
+<h2>A simple list of the hyperlinks contained in Peter Kim's The Hacker Playbook 3</h2>
+<p>The URLs come from Peter Kim's book, which is copyrighted by Secure Planet LLC.  I make no claim to ownership or rights to those URLs.  They are Secure Planet LLC's and all use of this project's HTML list of hyperlinks must conform to the LLC's rights.  For this reason, if you intend to do anything with this HTML page other than click on the links, I urge you to reach out to Peter Kim, the author of The Hacker Playbook 3.  </p>
+<br />
+<p>You can reach him through his website:</p>
+<a href="http://thehackerplaybook.com/">The Hacker Playbook</a>
+<br />
 <h1>Hyperlinks from <br /><br /> The Hacker Playbook 3</h1>
 <h2>by Peter Kim</h2>
 <p>If you have a hard copy of Peter's book and want to skip typing in URLs, find your URL in this list and click on it!  For more information on Peter's book or how to order it, click <a href="http://thehackerplaybook.com/" target="_blank">here</a>.</p>
