--- a/thp3urlz.html
+++ b/thp3urlz.html
@@ -16,7 +16,8 @@
 <p>You can reach him through his website:</p>
 <a href="http://thehackerplaybook.com/">The Hacker Playbook</a>
 <br />
-<h1>Hyperlinks from <br /><br /> The Hacker Playbook 3</h1>
+<h2>Hyperlinks from </h2><br /> 
+<h1>The Hacker Playbook 3</h1>
 <h2>by Peter Kim</h2>
 <p>If you have a hard copy of Peter's book and want to skip typing in URLs, find your URL in this list and click on it!  For more information on Peter's book or how to order it, click <a href="http://thehackerplaybook.com/" target="_blank">here</a>.</p>
 <ul>
